Updating the nav bar styling and links to sections of the page. Need to fix collapseable nav bar on mobile, function not working. Added text familiy to use to the css file

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto+Condensed:wght@300;400;700&display=swap');
+h1, h2, h3, h4, h5{
+    font-family: "Roboto Condensed", sans-serif;
+}
+h1{
+    letter-spacing: 4px;
+}
+p {
+    font-family: "serrat", sans-serif;
+}
 
 /* -_-_-_-_-_-_-_-_-_-_ containers _-_-_-_-_-_-_-_-_-_- */
 html,body
@@ -25,6 +34,13 @@ html,body
 .btn-primary{
     cursor: pointer;
 }
+a.anchor {
+    display: block;
+    position: relative;
+    top: -70px;
+    visibility: hidden;
+}
+
 /* -_-_-_-_-_-_-_-_-_-_ Headings _-_-_-_-_-_-_-_-_-_- */
 h1{
     text-transform: uppercase;
@@ -34,10 +50,10 @@ h1{
     color: white;
     position: relative;
     text-align: center;
-    padding-top: 10%;
+    padding-top: 20%;
 }
 .jumbotron p{
-    font-size: 10px;
+    font-size: 12px;
     color: white;
     position: relative;
     text-align: center;
@@ -58,46 +74,14 @@ h1{
     }
     .jumbotron h1{
         font-size: 50px;
+        padding-top: 15%;
     }
     .jumbotron p{
         font-size: 15px;
     }
 }
 /* -_-_-_-_-_-_-_-_-_-_ Nav Links _-_-_-_-_-_-_-_-_-_- */
-.links{
-    background-color: Black;
-    font-size: 16px;
-    opacity: 0.9;
-    position: fixed;
-    top: 0px;
-    z-index: 2;
-    min-width: 100%;
-}
-.links a{
-    color: white;
-}
 
-.links a:hover{
-    color: grey;
-}
-.mainnav{
-    max-height: 20px;
-    font-size: 0;
-}
-.navlink{
-    text-align: center;
-    font-size: 10px;
-    margin: 0 !important;
-    vertical-align: middle;
-}
-.navlink i{
-    padding-right: 2px; 
-}
-@media(min-width: 992px){
-    .navlink{
-        font-size: 25px;
-    }
-}
 /* -_-_-_-_-_-_-_-_-_-_ Covid-19 Section _-_-_-_-_-_-_-_-_-_- */
 #hideCovid{
     opacity: 0.9;
@@ -139,6 +123,7 @@ h1{
     background-size: cover;
     width: 100%;
     height: 360px;
+    padding-bottom: 5px;
 }
 .intro_text {
     margin: auto;
